# something-in-the-fog

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  build-all.sh  build_wasm.sh  flake.nix  index.html  linux_pre_build.sh
assets/shaders/: edge.wgsl  fog.wgsl  lighting.wgsl  sdf.wgsl  types.wgsl
rogue-algebra/: Cargo.toml  flake.nix  result
rogue-algebra/src/: lib.rs
src/: animation.rs  assets.rs  despawn_after.rs  intro.rs  main.rs  map.rs  mapgen.rs  mob.rs  performance_ui.rs  player.rs  renderer.rs  sound.rs  spawn.rs  world.rs
src/edge/: mat.rs  mod.rs  node.rs  pipeline.rs  prepare.rs
src/lighting/: mat.rs  mod.rs
src/sdf/: mat.rs  mod.rs  node.rs  pipeline.rs  prepare.rs
src/ui/: mod.rs  performance.rs
wasm/: index.html
