[workspace]
members = ["rogue-algebra"]

[package]
name = "something-in-the-fog"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true

[dependencies]
bevy = "0.15.3"
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui.git",  branch="main" }
line_drawing = "1.0.1"
rand = "0.8.5"
rogue-algebra = { path = "./rogue-algebra/" , features = ["bevy15"] }
grid-ray = { git = "https://github.com/bonsairobo/ilattice-rs/", branch = "main" }
