[workspace]
members = ["rogue-algebra"]

[package]
name = "something-in-the-fog"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true

[dependencies]
bevy = "0.15.3"
bevy_egui = { version = "0.33.0", default-features = false, features = ["default_fonts", "render"] }
line_drawing = "1.0.1"
pathfinding = "4.14.0"
rand = "0.8.5"
rogue-algebra = { path = "./rogue-algebra/", features = ["bevy15"] }
